--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'io.cucumber:cucumber-java:4.3.1'
+	testImplementation 'io.cucumber:cucumber-junit:4.3.1'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 		exclude group: 'junit', module: 'junit'
@@ -45,7 +46,7 @@ task cucumber() {
 		javaexec {
 			main = "cucumber.api.cli.Main"
 			classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
-			args = ['--plugin', 'pretty', '--glue', 'gradle.cucumber', 'src/test/resources']
+			args = ['--plugin', 'pretty', '--glue', 'features', 'src/test/resources']
 		}
 	}
 }
