--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'com.codeborne:selenide:5.2.3'
 	testImplementation 'io.cucumber:cucumber-java:4.3.1'
 	testImplementation 'io.cucumber:cucumber-junit:4.3.1'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
