--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,21 @@ version: 2.1
 workflows:
   due_push_or_pull_request: #workflow名
     jobs:
-      - test
+      - checkoutFile
+      - test:
+          requires:
+            - checkoutFile
 jobs:
+  checkoutFile:
+    docker:
+      - image: circleci/node:8.11.3
+    working_directory: ~/workspace
+    steps:
+      - checkout
+      - persist_to_workspace:
+          root: . # workspaceのrootパス（絶対パスかworking_directoryからの相対パス）
+          paths:
+            - . # 共有するパス（絶対パスかrootからの相対パス）
   test:
     docker: # See https://docs.docker.com/get-started/#docker-concepts if you are new to Docker.
       - image: circleci/openjdk:8u181-jdk-node-browsers-legacy
