--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-aop' // aspect使いたい
     // feature flag for java
 //    compile 'org.ff4j:ff4j-core:1.8.1'
 //    compile 'org.ff4j:ff4j-web:1.3.0'
