--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,8 +40,5 @@ jobs:
       - run:
           name: sonarqube
           command: |
-            ./gradlew sonarqube \
-              -Dsonar.projectKey=hirotoKirimaru_cucumber-sample \
-              -Dsonar.organization=hirotokirimaru-github \
-              -Dsonar.host.url=https://sonarcloud.io \
-              -Dsonar.login=7a3d5a80c3619dce9eef1efa9d4e9b9fbf0b9f83
+            ./gradlew sonarqube
+
