style: package rename

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 apply plugin: 'io.spring.dependency-management'
 
-group = 'com.example'
+group = 'jp.co.kelly'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
