[Add] github actionsが使えるように、github token追加

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,3 +21,5 @@ jobs:
       run: ./gradlew test
     - name: sonarcloud
       run: ./gradlew sonarqube
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_SONAR }}
