--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ sonarqube {
         property "sonar.projectKey", "hirotoKirimaru_cucumber-sample"
         property "sonar.organization", "hirotokirimaru-github"
         property "sonar.login", "7a3d5a80c3619dce9eef1efa9d4e9b9fbf0b9f83"
-        property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
+        property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/jacoco/test.exec"
     }
 }
 
