--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
+
+    // xmlunitで特定の項目を無視したければ、このライブラリを使う。
+    testImplementation 'org.xmlunit:xmlunit-placeholders:2.7.0'
+
     testImplementation 'com.codeborne:selenide:5.2.3'
     testImplementation 'io.cucumber:cucumber-java:4.3.1'
     testImplementation 'io.cucumber:cucumber-junit:4.3.1'
