--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,6 +19,11 @@ jobs:
       run: ./gradlew build
     - name: test
       run: ./gradlew test
+    - name: Upload test result
+      uses: actions/upload-artifact@v2
+      with:
+        name: test
+        path: build/reports/**/*
     - name: sonarcloud
       run: ./gradlew sonarqube
       env:
