--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,3 +1,10 @@
 app:
   config:
     appName: "HogeHoge"
+spring:
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://127.0.0.1:15432/database
+    username: user
+    password: pass
+    initialization-mode: always
