--- a/src/test/resources/application-repository-ut.yml
+++ b/src/test/resources/application-repository-ut.yml
@@ -1,3 +1,7 @@
-repository:
-  Driver: postgres
-  url:
+spring:
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:postgres://127.0.0.1:15432/database
+    username: user
+    password: pass
+    initialization-mode: always
