[Add] health check追加

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 
+    // actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
     // feature flag for java
 //    compile 'org.ff4j:ff4j-core:1.8.1'
 //    compile 'org.ff4j:ff4j-web:1.3.0'
