--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.2.0.M3'
+    id 'org.springframework.boot' version '2.3.5.RELEASE'
     id 'java'
     id "org.sonarqube" version "2.7"
     id "jacoco"
