--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     // actuator
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+    // validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     // feature flag for java
 //    compile 'org.ff4j:ff4j-core:1.8.1'
 //    compile 'org.ff4j:ff4j-web:1.3.0'
