--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'java'
     id "org.sonarqube" version "2.7"
     id "jacoco"
+
+    id 'org.gradle.test-retry' version '1.1.9'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -82,6 +84,14 @@ test {
     forkEvery = 4
 
     useJUnitPlatform()
+
+    retry {
+        // true だとBuild失敗。 falseだとBuild成功扱い。
+        failOnPassedAfterRetry = false
+        maxFailures = 10
+        maxRetries = 3
+    }
+
 }
 
 sonarqube {
