[Add] 並列処理を止める

--- a/build.gradle
+++ b/build.gradle
@@ -83,8 +83,9 @@ dependencies {
 }
 
 tasks.withType(Test) {
-    maxParallelForks = Runtime.runtime.availableProcessors()
-    forkEvery = 4
+// 自分の環境だと逆に遅い
+//    maxParallelForks = Runtime.runtime.availableProcessors()
+//    forkEvery = 4
 }
 
 test {
