--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'java'
     id "org.sonarqube" version "2.7"
-    id "jacoco"
+//    id "jacoco" // JDK15とコンフリクト？
 
     id 'org.gradle.test-retry' version '1.1.9'
 }
