[Add] 綺麗にする

--- a/build.gradle
+++ b/build.gradle
@@ -82,10 +82,10 @@ dependencies {
     testImplementation 'org.mockftpserver:MockFtpServer:2.7.1'
 
     // rest-assured
-    testImplementation 'io.rest-assured:rest-assured:4.3.3'
-    testImplementation 'io.rest-assured:json-path:4.3.3'
+//    testImplementation 'io.rest-assured:rest-assured:4.3.3'
+//    testImplementation 'io.rest-assured:json-path:4.3.3'
     testImplementation 'io.rest-assured:xml-path:4.3.3'
-//    testImplementation 'io.rest-assured:spring-mock-mvc:4.3.3'
+    testImplementation 'io.rest-assured:spring-mock-mvc:4.3.3'
 }
 
 tasks.withType(Test) {
