--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,10 @@ dependencies {
 //    testImplementation 'io.rest-assured:json-path:4.3.3'
     testImplementation 'io.rest-assured:xml-path:4.3.3'
     testImplementation 'io.rest-assured:spring-mock-mvc:4.3.3'
+
+    // Wiremock Server
+    testImplementation "com.github.tomakehurst:wiremock-jre8:2.27.2"
+    testImplementation "ru.lanwen.wiremock:wiremock-junit5:1.3.1"
 }
 
 tasks.withType(Test) {
