--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,10 @@ springBoot {
     buildInfo()
 }
 
-bootRun{
+bootRun {
     // -Pprofiles=prdで起動できるようにする
-    if (project.properties.containsKey("profiles")){
-        jvmArgs += '-Dspring.profiles.active='+ project.properties.get("profiles")
+    if (project.properties.containsKey("profiles")) {
+        jvmArgs += '-Dspring.profiles.active=' + project.properties.get("profiles")
     }
 }
 
@@ -90,6 +90,9 @@ dependencies {
     // Wiremock Server
     testImplementation "com.github.tomakehurst:wiremock-jre8:2.27.2"
     testImplementation "ru.lanwen.wiremock:wiremock-junit5:1.3.1"
+
+    // WebClient
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
 
 tasks.withType(Test) {
