--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Qodana - Code Inspection
       uses: JetBrains/qodana-action@v1.0-eap
       with:
-        project-dir: /src
+        project-dir: /src/**/*
         results-dir: qodana-results # will be resolved as /github/workspace/myproject/qodana-results
         report-dir: qodana-report # will be resolved as /github/workspace/myproject/qodana-report
     - if: always()
