--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,10 +34,10 @@ jobs:
     steps:
     - name: Qodana - Code Inspection
       uses: JetBrains/qodana-action@v1.0-eap
-      with:
-        project-dir: /src/**/*
-        results-dir: qodana-results # will be resolved as /github/workspace/myproject/qodana-results
-        report-dir: qodana-report # will be resolved as /github/workspace/myproject/qodana-report
+#      with:
+#        project-dir: /src/**/*
+#        results-dir: qodana-results # will be resolved as /github/workspace/myproject/qodana-results
+#        report-dir: qodana-report # will be resolved as /github/workspace/myproject/qodana-report
     - if: always()
       name: Results-dir
       uses: actions/upload-artifact@v2
