[Add] コンパイルエラーになるので削除

--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
 
     // spring-cloud-starter-config
-    implementation 'org.springframework.cloud.spring-cloud-starter-config'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-config'
 }
 
 tasks.withType(Test) {
