--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
     id 'org.gradle.test-retry' version '1.1.9'
 }
 
-group = 'jp.co.kelly'
+group = 'kirimaru'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '15'
 
