[Add] ymlに値を持たせる

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,4 +2,9 @@ spring:
   profiles:
     active:
       - ut
+    group:
+      ut:
+        - common
+        - external-ut
+        - repository-ut
 
