--- a/src/test/resources/application-ut.yml
+++ b/src/test/resources/application-ut.yml
@@ -1,28 +1,1 @@
-spring:
-  profiles:
-    include:
-      - common
-      - external-ut
-      - repository-ut
-
-external:
-  common: &common
-    host: localhost
-    protocol: http
-    port: 80
-    timeout: 3
-  twitter:
-    <<: *common
-    endpoint: twitter
-  facebook:
-    <<: *common
-    port: 10080
-    endpoint: facebook
-ftp:
-  host: localhost
-  port: 9082
-  username: user
-  password: pass
-  defaultTimeout: 3
-  soTimeout: 3
-  dataTimeout: 3
+# ここでやることない
