--- a/src/test/resources/application-repository-ut.yml
+++ b/src/test/resources/application-repository-ut.yml
@@ -1,7 +1,8 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:postgres://127.0.0.1:15432/database
+#    url: jdbc:postgres://127.0.0.1:15432/database
+    url: jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
     username: user
     password: pass
     initialization-mode: always
