--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -4,12 +4,15 @@ services:
     image: kirimaru:latest
     container_name: app
     environment:
-      SPRING.PROFILE.ACTIVE: WIN
+      SPRING_PROFILES_ACTIVE: dummy
     restart: always
     depends_on:
       - "db"
     ports:
       - 80:80
+#    networks: [backend]
+    links:
+      - "db:database"
   db:
     image: postgres:latest
     ports:
@@ -21,3 +24,9 @@ services:
       POSTGRES_DB: database
     hostname: postgres
     restart: always
+#    networks: [backend]
+#networks:
+#  default:
+#    driver: kirimaru-network
+#  backend:
+#    driver: kirimaru-network
