--- a/src/main/resources/application-dummy.yml
+++ b/src/main/resources/application-dummy.yml
@@ -8,7 +8,8 @@ app:
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://db:5432/database
+#    url: jdbc:postgresql://db:5432/database
+    url: jdbc:postgresql://dummy.hostname:5432/database
     username: user
     password: pass
     initialization-mode: always
