--- a/settings.gradle
+++ b/settings.gradle
@@ -1,17 +1,20 @@
 pluginManagement {
 	repositories {
-		maven { url 'https://repo.spring.io/snapshot' }
-		maven { url 'https://repo.spring.io/milestone' }
-		gradlePluginPortal()
+//		maven { url 'https://repo.spring.io/snapshot' }
+//		maven { url 'https://repo.spring.io/milestone' }
+//		gradlePluginPortal()
 	}
-	resolutionStrategy {
-		eachPlugin {
-			if (requested.id.id == 'org.springframework.boot') {
-				useModule("org.springframework.boot:spring-boot-gradle-plugin:${requested.version}")
-			}
-		}
-	}
+//	resolutionStrategy {
+//		eachPlugin {
+//			if (requested.id.id == 'org.springframework.boot') {
+//				useModule("org.springframework.boot:spring-boot-gradle-plugin:${requested.version}")
+//			}
+//		}
+//	}
 }
 rootProject.name = 'kirimaru'
-include 'e2e'
+
+include 'kirimaru-e2e'
+include 'kirimaru-repository'
+include 'kirimaru-backend'
 
