--- a/kirimaru-backend/build.gradle
+++ b/kirimaru-backend/build.gradle
@@ -46,6 +46,8 @@ repositories {
 }
 
 dependencies {
+    implementation project(':kirimaru-core')
+    implementation project(':kirimaru-repository')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-aop' // aspect使いたい
 
