[Add] 意味が分からん

--- a/kirimaru-repository/build.gradle
+++ b/kirimaru-repository/build.gradle
@@ -12,12 +12,18 @@ test {
     useJUnitPlatform()
 }
 
+compileJava{
+
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     implementation project(':kirimaru-core')
+    testImplementation project(':kirimaru-core')
+    testCompileOnly project(':kirimaru-core')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-aop' // aspect使いたい
 
