--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,34 @@
+buildscript {
+    ext {
+
+    }
+}
+
+allprojects {
+}
+
 subprojects {
 
+
+//    java {
+//        targetCompatibility = JavaVersion.VERSION_15;
+//        sourceCompatibility = JavaVersion.VERSION_15;
+//    }
 
 //    compileJava {
 //        options.encoding = "UTF-8"
 //    }
 //
-//    compileTestJava{
+//    compileTestJava {
 //        options.encoding = "UTF-8"
+//    }
+//
+//    task copyDependencies(type: Copy) {
+//        from configurations.compileClasspath
+//        into 'build/deps'
+//    }
+
+//    test {
+//        useJUnitPlatform()
 //    }
 }
