[Add] こうしたらうまく動いた！

--- a/kirimaru-backend/build.gradle
+++ b/kirimaru-backend/build.gradle
@@ -8,10 +8,16 @@ plugins {
     id 'org.gradle.test-retry' version '1.1.9'
 }
 
-bootJar{
-    archiveFileName = 'kirimaru.jar'
-}
-
+//bootJar{
+//    archiveFileName = 'kirimaru.jar'
+//}
+//bootJar {
+//    enabled = false
+//}
+//
+//jar {
+//    enabled = true
+//}
 group = 'kirimaru'
 version = '0.0.1-SNAPSHOT'
 //sourceCompatibility = '16'
