--- a/kirimaru-repository/build.gradle
+++ b/kirimaru-repository/build.gradle
@@ -19,7 +19,13 @@ compileJava{
 repositories {
     mavenCentral()
 }
+bootJar {
+    enabled = false
+}
 
+jar {
+    enabled = true
+}
 dependencies {
     implementation project(':kirimaru-core')
 //    implementation projects.kirimaruCore
