--- a/kirimaru-backend/build.gradle
+++ b/kirimaru-backend/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id "org.sonarqube" version "2.7"
-//    id "jacoco" // JDK15とコンフリクト？
+    id "jacoco" // JDK15とコンフリクト？
 
     id 'org.gradle.test-retry' version '1.1.9'
 }
