--- a/kirimaru-repository/src/test/resources/application-ut.yml
+++ b/kirimaru-repository/src/test/resources/application-ut.yml
@@ -5,5 +5,5 @@ spring:
     username: root
     password: root
   flyway:
-    schemas: test
-    locations: classpath:db/migration
+#    schemas: test
+    locations: classpath:db/migration,db/dev
