[Add] こっちにインサートする

--- a/kirimaru-repository/src/test/resources/application-ut.yml
+++ b/kirimaru-repository/src/test/resources/application-ut.yml
@@ -7,3 +7,6 @@ spring:
   flyway:
 #    schemas: test
     locations: classpath:db/migration,db/dev
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
