--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,6 +25,8 @@ jobs:
       with:
         name: test
         path: build/reports/**/*
+    - name: testReport
+      run: ./gradlew jacocoTestReport
     - name: sonarcloud
       run: ./gradlew sonarqube
       env:
