--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,19 @@ subprojects {
 //    test {
 //        useJUnitPlatform()
 //    }
+//    jacocoTestReport {
+//        reports {
+//            xml.enabled true
+//            html.enabled true
+//            csv.enabled false
+//        }
+//    }
 }
+//task jacocoRootReport(type: JacocoReport){
+//    dependsOn = subprojects.test
+//    reports {
+//        html.enabled = true
+//        xml.enabled = true
+//        csv.enabled =false
+//    }
+//}
