--- a/kirimaru-backend/build.gradle
+++ b/kirimaru-backend/build.gradle
@@ -140,13 +140,20 @@ sonarqube {
         property "sonar.login", "7a3d5a80c3619dce9eef1efa9d4e9b9fbf0b9f83"
 //        print "${project.buildDir}"
 //        property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
-        property "sonar.jacoco.reportPath", "kirimaru-backend/build/jacoco/test.exec"
+        property "sonar.jacoco.reportPath", "/kirimaru-backend/build/jacoco/test.exec"
+        property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
     }
 //    doLast {
 //        print "${project.buildDir}"
 //    }
 }
-
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+        csv.enabled false
+    }
+}
 /**
  * cucumberを動かすタスク
  * @developing タグは無視する設定
