--- a/kirimaru-e2e/build.gradle
+++ b/kirimaru-e2e/build.gradle
@@ -14,8 +14,11 @@ dependencies {
 //    testImplementation 'io.rest-assured:json-path:4.3.3'
 //    testImplementation 'io.rest-assured:xml-path:4.3.3'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+//    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    testImplementation 'org.assertj:assertj-core:3.20.2'
+
 }
 
 test {
