[Add] 定義する必要があった

--- a/kirimaru-batch/build.gradle
+++ b/kirimaru-batch/build.gradle
@@ -13,7 +13,9 @@ configurations {
         extendsFrom annotationProcessor
     }
 }
-
+task wrapper(type: Wrapper) {
+    gradleVersion = '7.0.2'
+}
 repositories {
     mavenCentral()
 }
