--- a/kirimaru-backend/build.gradle
+++ b/kirimaru-backend/build.gradle
@@ -1,7 +1,6 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.5'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
+    id 'kirimaru.app'
+//    id 'java'
     id "org.sonarqube" version "2.7"
     id "jacoco" // JDK15とコンフリクト？
 
@@ -21,7 +20,7 @@ plugins {
 group = 'kirimaru'
 version = '0.0.1-SNAPSHOT'
 //sourceCompatibility = '16'
-sourceCompatibility = '15' //lombokが動かない
+//sourceCompatibility = '15' //lombokが動かない
 
 // actuator infoに情報を載せる
 springBoot {
