--- a/kirimaru-backend/build.gradle
+++ b/kirimaru-backend/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'kirimaru.app'
 //    id 'java'
+//    id 'org.springframework.boot' version '2.5.2'
+//    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id "org.sonarqube" version "2.7"
     id "jacoco" // JDK15とコンフリクト？
 
