--- a/kirimaru-backend/build.gradle
+++ b/kirimaru-backend/build.gradle
@@ -20,8 +20,7 @@ plugins {
 //    enabled = true
 //}
 
-//sourceCompatibility = '16'
-sourceCompatibility = '15' //lombokが動かない
+sourceCompatibility = '16'
 
 // actuator infoに情報を載せる
 springBoot {
