--- a/kirimaru-backend/build.gradle
+++ b/kirimaru-backend/build.gradle
@@ -28,6 +28,13 @@ springBoot {
     buildInfo()
 }
 
+// build時にymlファイルに追記する
+processResources {
+    doLast {
+        file("build/resources/main/application.yml").append("info.version: 1.2.3")
+    }
+}
+
 bootRun {
     // -Pprofiles=prdで起動できるようにする
     if (project.properties.containsKey("profiles")) {
