--- a/kirimaru-repository/src/test/resources/application.yml
+++ b/kirimaru-repository/src/test/resources/application.yml
@@ -2,3 +2,10 @@ spring:
   profiles:
     active:
       - ut
+    group:
+      local:
+        - common
+        - repository-local
+      ut:
+        - common
+        - repository-ut
