--- a/kirimaru-repository/src/main/resources/application-repository-local.yml
+++ b/kirimaru-repository/src/main/resources/application-repository-local.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgres://127.0.0.1:15432/database
+    url: jdbc:postgresql://127.0.0.1:15432/database?currentSchema=test
     username: user
     password: pass
   flyway:
