feat: リポジトリを共通側に持たせる

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ allprojects {
 }
 
 subprojects {
-
+    repositories {
+        mavenCentral()
+    }
 
 //    java {
 //        targetCompatibility = JavaVersion.VERSION_15;
