--- a/kirimaru-backend/build.gradle
+++ b/kirimaru-backend/build.gradle
@@ -1,7 +1,6 @@
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '2.6.4'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version "${springBootVersion}"
+    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
     id "org.sonarqube" version "2.7"
     id "jacoco" // JDK15とコンフリクト？
 
@@ -19,7 +18,7 @@ plugins {
 //    enabled = true
 //}
 
-sourceCompatibility = '17'
+//sourceCompatibility = '17'
 version '0.0.1'
 
 // actuator infoに情報を載せる
