--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,6 +9,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Cache gradle modules
+      uses: actions/cache@v3
+      env:
+        cache-name: cache-gradle-modules
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
     - name: Set up JDK 17
       uses: actions/setup-java@v1
       with:
