--- a/kirimaru-core/build.gradle
+++ b/kirimaru-core/build.gradle
@@ -65,6 +65,10 @@ dependencies {
 
     // Unleash
     implementation 'no.finn.unleash:unleash-client-java:4.4.0'
+
+    // static mockの検証
+//    testImplementation 'org.mockito:mockito-core:4.0.0'
+    testImplementation 'org.mockito:mockito-inline:4.6.1'
 }
 
 test {
