--- a/kirimaru-repository/build.gradle
+++ b/kirimaru-repository/build.gradle
@@ -41,6 +41,9 @@ dependencies {
 
     testImplementation 'org.testcontainers:junit-jupiter:1.16.0'
     testImplementation 'org.testcontainers:postgresql:1.16.0'
+
+    // coreのテストソースコードだけ依存させる
+    testCompileOnly project(':kirimaru-core').sourceSets.test.output
 }
 
 test {
